<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view_room"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_room"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/star"
            android:layout_width="15dp"
            android:layout_height="15dp"
            card_view:layout_constraintTop_toBottomOf="@id/img_room"
            card_view:layout_constraintStart_toStartOf="@id/img_room"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/star"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="@id/star"
            card_view:layout_constraintStart_toEndOf="@id/star"
            card_view:layout_constraintBottom_toBottomOf="@id/star"
            android:text="@string/rate_init"
            android:textSize="15sp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tv_room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="@id/img_room"
            card_view:layout_constraintStart_toEndOf="@id/img_room"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/room_name_init"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintHorizontal_bias="0"/>

        <ImageView
            android:id="@+id/money"
            android:layout_width="18dp"
            android:layout_height="18dp"
            card_view:layout_constraintTop_toBottomOf="@id/tv_room_name"
            card_view:layout_constraintStart_toStartOf="@id/tv_room_name"
            android:src="@drawable/money"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_room_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toEndOf="@id/money"
            card_view:layout_constraintTop_toTopOf="@id/money"
            card_view:layout_constraintBottom_toBottomOf="@id/money"
            android:text="@string/room_price_init"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            android:paddingEnd="10dp"/>

        <ImageView
            android:id="@+id/personil"
            android:layout_width="16dp"
            android:layout_height="16dp"
            card_view:layout_constraintTop_toBottomOf="@id/money"
            card_view:layout_constraintStart_toStartOf="@id/money"
            card_view:layout_constraintEnd_toEndOf="@id/money"
            android:src="@drawable/person"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_personil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toTopOf="@id/personil"
            card_view:layout_constraintStart_toEndOf="@id/personil"
            card_view:layout_constraintBottom_toBottomOf="@id/personil"
            android:text="@string/room_init_personil"
            android:textSize="12sp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tv_title_facility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/facility"
            android:textStyle="italic"
            android:textSize="12sp"
            card_view:layout_constraintTop_toBottomOf="@id/tv_personil"
            card_view:layout_constraintStart_toStartOf="@id/personil"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_facility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/room_facility_init"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxEms="8"
            card_view:layout_constraintTop_toBottomOf="@id/tv_title_facility"
            card_view:layout_constraintStart_toStartOf="@id/tv_title_facility"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_check"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintHorizontal_bias="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
